[Bug #4341] Fixed autocomplete styling so that these dropdowns are more visible.

--- a/public/stylesheets/fcbkcomplete.css
+++ b/public/stylesheets/fcbkcomplete.css
@@ -5,7 +5,7 @@ ul.holder li { float: left; list-style-type: none; margin: 0 5px 4px 0; }
 ul.holder li.bit-box, ul.holder li.bit-input input { font: 11px "Lucida Grande", "Verdana"; }
 ul.holder li.bit-box { -moz-border-radius: 6px; -webkit-border-radius: 6px; border-radius: 6px; border: 1px solid #CAD8F3; background: #DEE7F8; padding: 1px 5px 2px; }
 ul.holder li.bit-box-focus { border-color: #598BEC; background: #598BEC; color: #fff; }
-ul.holder li.bit-input input { width: 150px; margin: 0; border: none; outline: 0; padding: 3px 0 2px; } /* no left/right padding here please */
+ul.holder li.bit-input input { width: 100px; margin: 0; border: none; outline: 0; padding: 3px 0 2px; } /* no left/right padding here please */
 ul.holder li.bit-input input.smallinput { width: 20px; }
 
 /* Facebook demo CSS */      
@@ -32,3 +32,9 @@ ul.holder li.bit-box-focus a.closebutton, ul.holder li.bit-box-focus a.closebutt
 .facebook-auto li { padding: 5px 12px; z-index: 1000; cursor: pointer; margin: 0; list-style-type: none; border: 1px solid #ccc; border-width: 0 1px 1px; background: #FFF;}
 .facebook-auto li em { font-weight: bold; font-style: normal; }
 .facebook-auto li.selected { background: #4173CC; color: #fff; }
+
+/* Overrides */
+
+ul.facebook-auto { width: 450px; }
+.facebook-auto li { background: #FFF0D9; }
+.facebook-auto li.selected, .facebook-auto li.auto-focus { background: #FFFDA4; }
